re-run the example noetbook

--- a/examples/MarrmotM01.ipynb
+++ b/examples/MarrmotM01.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "a8564493",
    "metadata": {},
    "outputs": [],
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "069ee59d",
    "metadata": {},
    "outputs": [],
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "a3203d39",
    "metadata": {},
    "outputs": [],
@@ -77,12 +77,13 @@
     "    yaml.dump({\n",
     "        'container_engine': 'docker', # or singularity\n",
     "        'output_dir': './', # the directory where the model work_dir will be created\n",
+    "        'singularity_dir': 'null',\n",
     "    }, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "5787b59b",
    "metadata": {},
    "outputs": [],
@@ -110,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "a46d2892",
    "metadata": {},
    "outputs": [
@@ -120,7 +121,7 @@
        "['2020.11']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,17 +132,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "id": "c4bcdad8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f10da6897f0>"
+       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f7b8e7a99a0>"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "4185acc3",
    "metadata": {},
    "outputs": [
@@ -164,10 +165,12 @@
        " ('initial_soil_moisture_storage', 5.0),\n",
        " ('solver',\n",
        "  Solver(name='createOdeApprox_IE', resnorm_tolerance=array([0.1]), resnorm_maxiter=array([6.]))),\n",
+       " ('start time', '1989-01-01T00:00:00+00:00'),\n",
+       " ('end time', '1992-12-31T00:00:00+00:00'),\n",
        " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,18 +181,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "5b41e8f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210512_151721/marrmot-m01_config.mat'),\n",
-       " PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210512_151721'))"
+       "(PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210518_163333/marrmot-m01_config.mat'),\n",
+       " PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210518_163333'))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -197,13 +200,14 @@
    "source": [
     "cfg_file, cfg_dir = model.setup(\n",
     "    maximum_soil_moisture_storage=1234.0,\n",
+    "    end_time = \"1989-01-10T00:00:00+00:00\",\n",
     ")\n",
     "cfg_file, cfg_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "925fd7bd",
    "metadata": {},
    "outputs": [
@@ -214,10 +218,12 @@
        " ('initial_soil_moisture_storage', 5.0),\n",
        " ('solver',\n",
        "  Solver(name='createOdeApprox_IE', resnorm_tolerance=array([0.1]), resnorm_maxiter=array([6.]))),\n",
+       " ('start time', '1989-01-01T00:00:00+00:00'),\n",
+       " ('end time', '1989-01-10T00:00:00+00:00'),\n",
        " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "8476fe8a",
    "metadata": {},
    "outputs": [],
@@ -238,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "516620d3",
    "metadata": {},
    "outputs": [],
@@ -248,7 +254,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "9e12e910",
    "metadata": {},
    "outputs": [
@@ -267,7 +273,7 @@
        " 'wb')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "c7302682",
    "metadata": {},
    "outputs": [
@@ -288,7 +294,7 @@
        "array([0.])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -299,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "769635d6",
    "metadata": {},
    "outputs": [
@@ -664,7 +670,7 @@
        "  * latitude   (latitude) float64 35.29\n",
        "    time       object 1989-01-02 00:00:00\n",
        "Attributes:\n",
-       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-643533f3-00f1-4451-9b33-fd361f06e3c9' class='xr-array-in' type='checkbox' checked><label for='section-643533f3-00f1-4451-9b33-fd361f06e3c9' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0</span></div><div class='xr-array-data'><pre>array([[0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-fb93a1cc-8c29-4577-a936-239c4a02c96f' class='xr-section-summary-in' type='checkbox'  checked><label for='section-fb93a1cc-8c29-4577-a936-239c4a02c96f' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-712fcca9-174d-4de1-818a-71665a3b09c3' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-712fcca9-174d-4de1-818a-71665a3b09c3' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a8d798f1-0033-4046-b5ac-93cd9413fa6a' class='xr-var-data-in' type='checkbox'><label for='data-a8d798f1-0033-4046-b5ac-93cd9413fa6a' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-e42597b6-d3a4-43e8-aa3e-702473a0b068' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e42597b6-d3a4-43e8-aa3e-702473a0b068' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-e2ed1a82-7b66-4ac0-b85c-e3f071ad3380' class='xr-var-data-in' type='checkbox'><label for='data-e2ed1a82-7b66-4ac0-b85c-e3f071ad3380' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-02 00:00:00</div><input id='attrs-f5adc62c-d0e4-4730-8bd0-d523b5f217ba' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-f5adc62c-d0e4-4730-8bd0-d523b5f217ba' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-441cfbe6-69bf-4294-a899-2be4d70280cb' class='xr-var-data-in' type='checkbox'><label for='data-441cfbe6-69bf-4294-a899-2be4d70280cb' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 2, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-0e5eb8e0-7a4c-43a8-852d-2970a20e50a5' class='xr-section-summary-in' type='checkbox'  checked><label for='section-0e5eb8e0-7a4c-43a8-852d-2970a20e50a5' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
+       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-23f2099f-6513-4a1f-be8e-0a4699fb119e' class='xr-array-in' type='checkbox' checked><label for='section-23f2099f-6513-4a1f-be8e-0a4699fb119e' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0</span></div><div class='xr-array-data'><pre>array([[0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-abf2a8ab-dc9f-4912-bc0f-bb210ba3ae4a' class='xr-section-summary-in' type='checkbox'  checked><label for='section-abf2a8ab-dc9f-4912-bc0f-bb210ba3ae4a' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-c4717736-f615-4184-97b3-ff3525c4cbb1' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c4717736-f615-4184-97b3-ff3525c4cbb1' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-00050a2e-824d-41ea-8985-b024e7b4a4c0' class='xr-var-data-in' type='checkbox'><label for='data-00050a2e-824d-41ea-8985-b024e7b4a4c0' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-18d40141-ae0a-480b-9eaa-2b708301994c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-18d40141-ae0a-480b-9eaa-2b708301994c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a1b7bb29-d5aa-49ed-9c6a-43798ae29a44' class='xr-var-data-in' type='checkbox'><label for='data-a1b7bb29-d5aa-49ed-9c6a-43798ae29a44' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-02 00:00:00</div><input id='attrs-49bb533c-0e23-44b2-abde-469653b649cf' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-49bb533c-0e23-44b2-abde-469653b649cf' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5fc3cf88-6c7d-4226-b2c1-a1ef73a9cba1' class='xr-var-data-in' type='checkbox'><label for='data-5fc3cf88-6c7d-4226-b2c1-a1ef73a9cba1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 2, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3cd44d2d-916f-46dd-8f57-e86e1aff0f70' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3cd44d2d-916f-46dd-8f57-e86e1aff0f70' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'flux_out_Q' (latitude: 1, longitude: 1)>\n",
@@ -677,7 +683,7 @@
        "    units:    mm day"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -688,8 +694,35 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 16,
+   "id": "9ef4e3c5-1a0e-403a-af7b-cbb1354c4eb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "while (model.time < model.end_time):\n",
+    "    model.update()\n",
+    "    print(model.get_value('flux_out_Q'))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 17,
-   "id": "449b8563",
+   "id": "b0585b27-c88b-4f8a-8bbe-18dba5cef444",
    "metadata": {},
    "outputs": [],
    "source": [
