Add (optional) forcing class to constructor

--- a/examples/pcrglobwb.ipynb
+++ b/examples/pcrglobwb.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3c3e1cb8",
+   "id": "d100c85e",
    "metadata": {},
    "source": [
     "# Running PCRGlobWB using the eWaterCycle system"
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dbf84ae3",
+   "id": "cfa8b241",
    "metadata": {
     "tags": []
    },
@@ -23,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "5bd3f884",
+   "id": "bbfa81c9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "7c753165",
+   "id": "32b582bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a734aff4",
+   "id": "78959d82",
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "073469b7",
+   "id": "6a8cc5b3",
    "metadata": {},
    "outputs": [
     {
@@ -99,17 +99,46 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "66dbe01d",
+   "id": "19679dc2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "PCRGlobWBForcing(precipitationNC=PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case/forcing/precipitation_2001to2010.nc'), temperatureNC=PosixPath('/home/peter/ewatercycle/ewatercycle/examples/temperature_2001to2010.nc'), refETPotFileNC='')\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/peter/ewatercycle/ewatercycle/ewatercycle/models/pcrglobwb.py:48: UserWarning: No valid input path received for refETPotFileNC, defaulting to ''.\n"
+     ]
+    }
+   ],
    "source": [
-    "pcrglob = ewatercycle.models.PCRGlobWB(version=\"setters\", parameter_set=parameterset)"
+    "forcing = ewatercycle.models.pcrglobwb.PCRGlobWBForcing(\n",
+    "    precipitationNC = \"pcrglobwb_example_case/forcing/precipitation_2001to2010.nc\",\n",
+    "    temperatureNC = \"temperature_2001to2010.nc\"\n",
+    ")\n",
+    "print(forcing)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "2b27ab0e",
+   "id": "5b0803f1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pcrglob = ewatercycle.models.PCRGlobWB(version=\"setters\", parameter_set=parameterset, forcing=forcing)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "b989c011",
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +148,7 @@
        "  {'inputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case',\n",
        "   'cloneMap': 'cloneMaps/RhineMeuse30min.map',\n",
        "   'landmask': 'None',\n",
-       "   'outputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_165234',\n",
+       "   'outputDir': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210519_160713',\n",
        "   'spinUpOutputDir': 'True',\n",
        "   'institution': 'Department of Physical Geography, Utrecht University',\n",
        "   'title': 'PCR-GLOBWB output',\n",
@@ -132,10 +161,10 @@
        "   'minConvForChanSto': '0.5',\n",
        "   'minConvForTotlSto': '0.5'}),\n",
        " ('meteoOptions',\n",
-       "  {'precipitationNC': 'forcing/precipitation_2001to2010.nc',\n",
-       "   'temperatureNC': 'forcing/temperature_2001to2010.nc',\n",
+       "  {'precipitationNC': '/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_example_case/forcing/precipitation_2001to2010.nc',\n",
+       "   'temperatureNC': '/home/peter/ewatercycle/ewatercycle/examples/temperature_2001to2010.nc',\n",
        "   'referenceETPotMethod': 'Hamon',\n",
-       "   'refETPotFileNC': 'forcing/CRU-TS3.21/merged_1958_to_2010/CRU-TS3.21_ERA-40_ERA-Interim_daily_referencePotET_1958_to_2010.nc'}),\n",
+       "   'refETPotFileNC': '/home/peter/ewatercycle/ewatercycle/examples'}),\n",
        " ('landSurfaceOptions',\n",
        "  {'debugWaterBalance': 'True',\n",
        "   'numberOfUpperSoilLayers': '2',\n",
@@ -279,7 +308,7 @@
        "   'zlib': 'True'})]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -290,34 +319,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "8d80f7d7",
+   "execution_count": 7,
+   "id": "5af6b0d9",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_165234/pcrglobwb_ewatercycle.ini'),\n",
-       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210517_165234'))"
+       "(PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210519_160713/pcrglobwb_ewatercycle.ini'),\n",
+       " PosixPath('/home/peter/ewatercycle/ewatercycle/examples/pcrglobwb_20210519_160713'))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# We can modify all settings above during the setup. Here's how to use a different forcing file\n",
-    "cfg_file, cfg_dir = pcrglob.setup(meteoOptions = {\n",
-    "  'temperatureNC': './temperature_2001to2010.nc',  # Copied from example dir to test overwrite\n",
-    "})\n",
+    "cfg_file, cfg_dir = pcrglob.setup()\n",
     "cfg_file, cfg_dir"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "a36c4717",
+   "execution_count": 8,
+   "id": "ea1f6718",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,8 +353,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "066c7c4c",
+   "execution_count": 9,
+   "id": "c8cd5fe7",
    "metadata": {},
    "outputs": [
     {
@@ -432,7 +459,7 @@
        " 'surface_water_abstraction_volume')"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -443,8 +470,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "49e5eb1b",
+   "execution_count": 10,
+   "id": "38dd54be",
    "metadata": {},
    "outputs": [
     {
@@ -469,7 +496,7 @@
        "        0., nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan])"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -480,8 +507,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "0bea8ea0",
+   "execution_count": 11,
+   "id": "a52e1a25",
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +897,7 @@
        "  * latitude   (latitude) float64 46.25 46.75 47.25 47.75 ... 51.25 51.75 52.25\n",
        "    time       object 2000-12-31 00:00:00\n",
        "Attributes:\n",
-       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 13</li><li><span class='xr-has-index'>longitude</span>: 17</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-11f201ed-7c25-4125-a4dd-60f482f1cf20' class='xr-array-in' type='checkbox' checked><label for='section-11f201ed-7c25-4125-a4dd-60f482f1cf20' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
+       "    units:    m3.s-1</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 13</li><li><span class='xr-has-index'>longitude</span>: 17</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-f3d2c8d5-df22-4ab5-b5f5-cd91009a93b6' class='xr-array-in' type='checkbox' checked><label for='section-f3d2c8d5-df22-4ab5-b5f5-cd91009a93b6' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan, nan,\n",
        "        nan, nan, nan, nan],\n",
        "       [nan, nan, nan, nan, nan, nan,  0.,  0.,  0.,  0.,  0.,  0.,  0.,\n",
        "        nan, nan, nan, nan],\n",
@@ -895,9 +922,9 @@
        "       [ 0.,  0.,  0.,  0.,  0.,  0.,  0.,  0.,  0., nan, nan, nan, nan,\n",
        "        nan, nan, nan, nan],\n",
        "       [nan,  0.,  0.,  0.,  0., nan, nan, nan, nan, nan, nan, nan, nan,\n",
-       "        nan, nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-b88b7961-e48f-483c-8b4e-796940fab249' class='xr-section-summary-in' type='checkbox'  checked><label for='section-b88b7961-e48f-483c-8b4e-796940fab249' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 4.25 4.75 ... 11.25 11.75</div><input id='attrs-cd3ea74e-b44c-4c8d-b89b-67aff2461016' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-cd3ea74e-b44c-4c8d-b89b-67aff2461016' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-707c4452-5874-431f-9348-f9ce4950c367' class='xr-var-data-in' type='checkbox'><label for='data-707c4452-5874-431f-9348-f9ce4950c367' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  4.25,  4.75,  5.25,  5.75,  6.25,  6.75,  7.25,  7.75,  8.25,\n",
-       "        8.75,  9.25,  9.75, 10.25, 10.75, 11.25, 11.75])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 46.75 47.25 ... 51.75 52.25</div><input id='attrs-5f9a677e-0548-4d1e-9b7f-27319bab9bd6' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-5f9a677e-0548-4d1e-9b7f-27319bab9bd6' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-3e207caa-9e32-4e19-af8a-8691446920ff' class='xr-var-data-in' type='checkbox'><label for='data-3e207caa-9e32-4e19-af8a-8691446920ff' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 46.75, 47.25, 47.75, 48.25, 48.75, 49.25, 49.75, 50.25, 50.75,\n",
-       "       51.25, 51.75, 52.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2000-12-31 00:00:00</div><input id='attrs-65dcce7a-5bc7-48f2-bdc4-1f4cf1500e6c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-65dcce7a-5bc7-48f2-bdc4-1f4cf1500e6c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-36b5b588-af6e-4022-8c33-e231b58b19eb' class='xr-var-data-in' type='checkbox'><label for='data-36b5b588-af6e-4022-8c33-e231b58b19eb' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2000, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-1e072707-afd5-4d85-a45c-dff843414a37' class='xr-section-summary-in' type='checkbox'  checked><label for='section-1e072707-afd5-4d85-a45c-dff843414a37' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
+       "        nan, nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-b3b88716-0a5c-4bcc-a711-eeecb877217c' class='xr-section-summary-in' type='checkbox'  checked><label for='section-b3b88716-0a5c-4bcc-a711-eeecb877217c' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>3.75 4.25 4.75 ... 11.25 11.75</div><input id='attrs-b41a5b19-76bd-4040-9a78-d838c84f323d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-b41a5b19-76bd-4040-9a78-d838c84f323d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-d82fac25-43e3-4a53-9fef-dbab60d94a02' class='xr-var-data-in' type='checkbox'><label for='data-d82fac25-43e3-4a53-9fef-dbab60d94a02' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 3.75,  4.25,  4.75,  5.25,  5.75,  6.25,  6.75,  7.25,  7.75,  8.25,\n",
+       "        8.75,  9.25,  9.75, 10.25, 10.75, 11.25, 11.75])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>46.25 46.75 47.25 ... 51.75 52.25</div><input id='attrs-6ad378ea-8a96-492b-9b81-7de9691da70a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-6ad378ea-8a96-492b-9b81-7de9691da70a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a123e3c7-c573-4701-a13d-efb00965af97' class='xr-var-data-in' type='checkbox'><label for='data-a123e3c7-c573-4701-a13d-efb00965af97' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([46.25, 46.75, 47.25, 47.75, 48.25, 48.75, 49.25, 49.75, 50.25, 50.75,\n",
+       "       51.25, 51.75, 52.25])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>2000-12-31 00:00:00</div><input id='attrs-4eb8e5f9-216a-435f-9341-f21e1311a08a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-4eb8e5f9-216a-435f-9341-f21e1311a08a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-97c37a44-1cfc-4013-b025-3bcfeba00c28' class='xr-var-data-in' type='checkbox'><label for='data-97c37a44-1cfc-4013-b025-3bcfeba00c28' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(2000, 12, 31, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-551b48fc-e87b-4b0c-bdd5-abafc22d5688' class='xr-section-summary-in' type='checkbox'  checked><label for='section-551b48fc-e87b-4b0c-bdd5-abafc22d5688' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m3.s-1</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'discharge' (latitude: 13, longitude: 17)>\n",
@@ -935,7 +962,7 @@
        "    units:    m3.s-1"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,8 +973,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "72facaa2",
+   "execution_count": 12,
+   "id": "78afe6ec",
    "metadata": {},
    "outputs": [
     {
@@ -977,17 +1004,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "d8135bc1",
+   "execution_count": 13,
+   "id": "9f986cfd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x7f24827c5b80>"
+       "<matplotlib.collections.QuadMesh at 0x7ffa03131460>"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -1012,7 +1039,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0e08ec73",
+   "id": "2425feb9",
    "metadata": {},
    "outputs": [],
    "source": []
