--- a/examples/lisflood.ipynb
+++ b/examples/lisflood.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "27d5425f",
+   "id": "9b0e88c2",
    "metadata": {},
    "source": [
     "![image](https://www.ewatercycle.org/assets/logo.png)"
@@ -11,7 +11,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "85cb7079",
+   "id": "4c51ee81",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3d61f87a",
+   "id": "ea744aa5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "73ca6105",
+   "id": "43e22d8e",
    "metadata": {},
    "source": [
     "## Run lisflood class\n",
@@ -56,7 +56,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "8716e47f",
+   "id": "cb53d22e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "41ccb313",
+   "id": "1d25cb55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "b34cc5dc",
+   "id": "b082e27d",
    "metadata": {},
    "outputs": [
     {
@@ -101,25 +101,26 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "4dcad433",
+   "id": "1b758488",
    "metadata": {},
    "outputs": [],
    "source": [
     "# lisflood_ERA-Interim_*_1990_1990.nc data can be copied \n",
     "# from /projects/0/wtrcycle/comparison/forcing/lisflood\n",
+    "# also the forcing_dir should include the lisvap output files\n",
     "forcing_dir = 'forcing_data'"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "c9515fbe",
+   "id": "ba4677a1",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<ewatercycle.models.lisflood.Lisflood at 0x2aaf10831af0>"
+       "<ewatercycle.models.lisflood.Lisflood at 0x2ab22e6ecdf0>"
       ]
      },
      "execution_count": 7,
@@ -136,7 +137,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "5f5ac05b",
+   "id": "49b7f747",
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +148,7 @@
        " ('model boundaries',\n",
        "  '/lustre1/0/wtrcycle/comparison/recipes_auxiliary_datasets/LISFLOOD'),\n",
        " ('configuration template',\n",
-       "  PosixPath('/lustre1/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisflood.xml')),\n",
+       "  '/lustre1/0/wtrcycle/comparison/lisflood_input/settings_templates/settings_lisflood.xml'),\n",
        " ('forcing directory', '/nfs/home2/fakhereh/temp/lisflood_run/forcing_data')]"
       ]
      },
@@ -162,15 +163,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "516f372d",
+   "execution_count": 9,
+   "id": "051349b1",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 41404\n"
+      "Running /nfs/home2/fakhereh/temp/lisflood_run/ewatercycle-lisflood-grpc4bmi_20.10.sif singularity container on port 60596\n"
      ]
     }
    ],
@@ -181,16 +182,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "b7ad14e2",
+   "execution_count": 10,
+   "id": "e4f3c412",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/scratch/shared/ewatercycle/lisflood_20210517_154035/lisflood_setting.xml\n",
-      "/scratch/shared/ewatercycle/lisflood_20210517_154035\n"
+      "/scratch/shared/ewatercycle/lisflood_20210519_174141/lisflood_setting.xml\n",
+      "/scratch/shared/ewatercycle/lisflood_20210519_174141\n"
      ]
     }
    ],
@@ -201,8 +202,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "73c82ead",
+   "execution_count": 11,
+   "id": "e08c8211",
    "metadata": {},
    "outputs": [
     {
@@ -220,37 +221,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "a8559b9b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# run lisvap\n",
-    "lisvap_results = model.run_lisvap(forcing_dir)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "id": "b9345265",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, b'Lisvap  0.4.2   23/08/2019\\n\\n(C) Disaster Risk Management Knowledge Centre\\n    Joint Research Centre of the European Commission\\n    Units E1,D2 I-21020 Ispra (Va), Italy\\n\\n\\n\\nStart date: 01/01/1990 00:00 (1) - End date: 31/12/1990 00:00 (365)\\n\\r1\\r2\\r3\\r4\\r5\\r6\\r7\\r8\\r9\\r10\\r11\\r12\\r13\\r14\\r15\\r16\\r17\\r18\\r19\\r20\\r21\\r22\\r23\\r24\\r25\\r26\\r27\\r28\\r29\\r30\\r31\\r32\\r33\\r34\\r35\\r36\\r37\\r38\\r39\\r40\\r41\\r42\\r43\\r44\\r45\\r46\\r47\\r48\\r49\\r50\\r51\\r52\\r53\\r54\\r55\\r56\\r57\\r58\\r59\\r60\\r61\\r62\\r63\\r64\\r65\\r66\\r67\\r68\\r69\\r70\\r71\\r72\\r73\\r74\\r75\\r76\\r77\\r78\\r79\\r80\\r81\\r82\\r83\\r84\\r85\\r86\\r87\\r88\\r89\\r90\\r91\\r92\\r93\\r94\\r95\\r96\\r97\\r98\\r99\\r100\\r101\\r102\\r103\\r104\\r105\\r106\\r107\\r108\\r109\\r110\\r111\\r112\\r113\\r114\\r115\\r116\\r117\\r118\\r119\\r120\\r121\\r122\\r123\\r124\\r125\\r126\\r127\\r128\\r129\\r130\\r131\\r132\\r133\\r134\\r135\\r136\\r137\\r138\\r139\\r140\\r141\\r142\\r143\\r144\\r145\\r146\\r147\\r148\\r149\\r150\\r151\\r152\\r153\\r154\\r155\\r156\\r157\\r158\\r159\\r160\\r161\\r162\\r163\\r164\\r165\\r166\\r167\\r168\\r169\\r170\\r171\\r172\\r173\\r174\\r175\\r176\\r177\\r178\\r179\\r180\\r181\\r182\\r183\\r184\\r185\\r186\\r187\\r188\\r189\\r190\\r191\\r192\\r193\\r194\\r195\\r196\\r197\\r198\\r199\\r200\\r201\\r202\\r203\\r204\\r205\\r206\\r207\\r208\\r209\\r210\\r211\\r212\\r213\\r214\\r215\\r216\\r217\\r218\\r219\\r220\\r221\\r222\\r223\\r224\\r225\\r226\\r227\\r228\\r229\\r230\\r231\\r232\\r233\\r234\\r235\\r236\\r237\\r238\\r239\\r240\\r241\\r242\\r243\\r244\\r245\\r246\\r247\\r248\\r249\\r250\\r251\\r252\\r253\\r254\\r255\\r256\\r257\\r258\\r259\\r260\\r261\\r262\\r263\\r264\\r265\\r266\\r267\\r268\\r269\\r270\\r271\\r272\\r273\\r274\\r275\\r276\\r277\\r278\\r279\\r280\\r281\\r282\\r283\\r284\\r285\\r286\\r287\\r288\\r289\\r290\\r291\\r292\\r293\\r294\\r295\\r296\\r297\\r298\\r299\\r300\\r301\\r302\\r303\\r304\\r305\\r306\\r307\\r308\\r309\\r310\\r311\\r312\\r313\\r314\\r315\\r316\\r317\\r318\\r319\\r320\\r321\\r322\\r323\\r324\\r325\\r326\\r327\\r328\\r329\\r330\\r331\\r332\\r333\\r334\\r335\\r336\\r337\\r338\\r339\\r340\\r341\\r342\\r343\\r344\\r345\\r346\\r347\\r348\\r349\\r350\\r351\\r352\\r353\\r354\\r355\\r356\\r357\\r358\\r359\\r360\\r361\\r362\\r363\\r364\\r365', b'')\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(lisvap_results)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "61d993b5",
+   "execution_count": 12,
+   "id": "cbdc26e8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,8 +232,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "cb4ca822",
+   "execution_count": 13,
+   "id": "55444481",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -271,8 +243,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "0b7ac81b",
+   "execution_count": 14,
+   "id": "baa24110",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,8 +254,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "49fb10e5",
+   "execution_count": 15,
+   "id": "4c9b01de",
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +264,7 @@
        "3060"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,8 +275,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "id": "3667f42a",
+   "execution_count": 16,
+   "id": "88fa0560",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,8 +285,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "id": "9d45fa79",
+   "execution_count": 17,
+   "id": "b9d948f7",
    "metadata": {},
    "outputs": [
     {
@@ -684,13 +656,13 @@
        "  * latitude   (latitude) float64 89.95 89.85 89.75 ... -59.75 -59.85 -59.95\n",
        "    time       object 1990-01-03 00:00:00\n",
        "Attributes:\n",
-       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-4b99b959-aaa0-4568-809c-4882fb4d68cc' class='xr-array-in' type='checkbox' checked><label for='section-4b99b959-aaa0-4568-809c-4882fb4d68cc' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
+       "    units:    m^3/s</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'Discharge'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1500</li><li><span class='xr-has-index'>longitude</span>: 3600</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-81d24ab5-d77b-44b9-ab8b-7f25d539d61c' class='xr-array-in' type='checkbox' checked><label for='section-81d24ab5-d77b-44b9-ab8b-7f25d539d61c' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>nan nan nan nan nan nan nan nan ... nan nan nan nan nan nan nan nan</span></div><div class='xr-array-data'><pre>array([[nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       ...,\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
        "       [nan, nan, nan, ..., nan, nan, nan],\n",
-       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-e3e1a42e-7142-4834-a7fd-74aac0e1d833' class='xr-section-summary-in' type='checkbox'  checked><label for='section-e3e1a42e-7142-4834-a7fd-74aac0e1d833' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-5c01d989-5e6a-4e3e-b86a-e013db80ab90' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-5c01d989-5e6a-4e3e-b86a-e013db80ab90' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-9fffb5b2-62f6-493a-8eff-4fe906285e1d' class='xr-var-data-in' type='checkbox'><label for='data-9fffb5b2-62f6-493a-8eff-4fe906285e1d' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-2dd26848-01fe-400e-855c-ff958359f8bc' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-2dd26848-01fe-400e-855c-ff958359f8bc' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-b5287cca-704f-4040-b8a3-5160dc790c2f' class='xr-var-data-in' type='checkbox'><label for='data-b5287cca-704f-4040-b8a3-5160dc790c2f' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-a3c94153-c01c-476b-b12b-8c94d87b3e5e' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-a3c94153-c01c-476b-b12b-8c94d87b3e5e' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-04781890-924b-4708-84f0-eb5950360448' class='xr-var-data-in' type='checkbox'><label for='data-04781890-924b-4708-84f0-eb5950360448' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3c84b973-99eb-4e34-b35d-90ac2a572158' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3c84b973-99eb-4e34-b35d-90ac2a572158' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
+       "       [nan, nan, nan, ..., nan, nan, nan]])</pre></div></div></li><li class='xr-section-item'><input id='section-6fad18fd-d802-4867-9a9e-17facfa1eeb0' class='xr-section-summary-in' type='checkbox'  checked><label for='section-6fad18fd-d802-4867-9a9e-17facfa1eeb0' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>-179.9 -179.8 ... 179.8 179.9</div><input id='attrs-ee4be4ee-dc71-452b-a9d4-726be4d77d7a' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-ee4be4ee-dc71-452b-a9d4-726be4d77d7a' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-beec18ec-4a63-40ca-9e58-a40c1f0f4fb5' class='xr-var-data-in' type='checkbox'><label for='data-beec18ec-4a63-40ca-9e58-a40c1f0f4fb5' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([-179.95, -179.85, -179.75, ...,  179.75,  179.85,  179.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>89.95 89.85 89.75 ... -59.85 -59.95</div><input id='attrs-e428dfc5-924b-406c-9a85-f209e1319349' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e428dfc5-924b-406c-9a85-f209e1319349' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-2fd53026-e882-459a-9e40-d7b59f96137e' class='xr-var-data-in' type='checkbox'><label for='data-2fd53026-e882-459a-9e40-d7b59f96137e' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([ 89.95,  89.85,  89.75, ..., -59.75, -59.85, -59.95])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1990-01-03 00:00:00</div><input id='attrs-2f0f1b94-9ad2-4edd-a218-1a96fafd1b17' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-2f0f1b94-9ad2-4edd-a218-1a96fafd1b17' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-0ad950b4-0427-44a7-a83e-b20346026558' class='xr-var-data-in' type='checkbox'><label for='data-0ad950b4-0427-44a7-a83e-b20346026558' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1990, 1, 3, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-b3c2d485-3579-4c1d-9a49-a2247142426e' class='xr-section-summary-in' type='checkbox'  checked><label for='section-b3c2d485-3579-4c1d-9a49-a2247142426e' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>m^3/s</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'Discharge' (latitude: 1500, longitude: 3600)>\n",
@@ -709,7 +681,7 @@
        "    units:    m^3/s"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -720,17 +692,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "id": "92bfddcd",
+   "execution_count": 18,
+   "id": "353a7375",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<matplotlib.collections.QuadMesh at 0x2b66658c7ac0>"
+       "<matplotlib.collections.QuadMesh at 0x2ab25d79b100>"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -756,8 +728,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "67fdd690",
+   "execution_count": 19,
+   "id": "dccba849",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -768,7 +740,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5a8ef9ac",
+   "id": "fdfdcd4e",
    "metadata": {},
    "outputs": [],
    "source": []
