changed API slightly after some comments

--- a/examples/ewatercycle_api_notebook.ipynb
+++ b/examples/ewatercycle_api_notebook.ipynb
@@ -122,8 +122,8 @@
     "        'wflow_dem_file' : '/some/path/to/dem.dem',\n",
     "        'hype_catchment_delineation' : '/some/other/shapefile'\n",
     "    },\n",
-    "    #unsure this is the right name. output_dir? storage_dir? forcing_dir? dir?\n",
-    "    storage_dir='/path/to/forcing/output/', # (optional, otherwise generated)\n",
+    "    #location on the file system where the output will but placed. Optional, otherwise generated.\n",
+    "    directory='/path/to/forcing/output/',\n",
     ")\n",
     "\n",
     "# Calling this function should show a progress bar, or at least auto-hide or auto-scroll the output."
@@ -175,6 +175,36 @@
   },
   {
    "cell_type": "markdown",
+   "id": "da5e3d20",
+   "metadata": {},
+   "source": [
+    "## Loading existing forcing\n",
+    "\n",
+    "Existing forcing can also be loaded using a function much like the forcing generation function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cc98ce8a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ewatercycle.forcing\n",
+    "\n",
+    "forcing = ewatercycle.forcing.load(\n",
+    "    #location on the file system where the output can be found\n",
+    "    directory='/path/to/forcing/output/',\n",
+    "    target_model='wflow', \n",
+    "    model_specific_options = {\n",
+    "        'forcing_filename' : 'some-filename.nc', # relative to forcing directory\n",
+    "        'temperature-variable-name': 'TEMP'\n",
+    "    },\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "e652e0d1",
    "metadata": {},
    "source": [
@@ -215,22 +245,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ewatercycle.models.Wflow.available_parameter_sets\n",
-    "# [\"30-min-global\", \"05-min-rhinemeuse\"]\n",
+    "import ewatercycle.parameter_sets\n",
     "\n",
-    "parameter_set = ewatercycle.models.Wflow.get_parameter_set('30-min-global')\n",
+    "ewatercycle.parameter_sets.available_parameter_sets(target_model='wflow')\n",
+    "# [\"wflow-30-min-global\", \"wflow-05-min-rhinemeuse\"]\n",
+    "\n",
+    "parameter_set = ewatercycle.parameter_sets.get_parameter_set('wflow-30-min-global')\n",
+    "\n",
+    "parameter_set.target_model\n",
+    "# 'wflow'\n",
     "\n",
     "parameter_set.doi\n",
     "# 'https://doi.org/10.1000/182'\n",
     "\n",
     "parameter_set.id\n",
-    "# '30-min-global'\n",
+    "# 'wflow-30-min-global'\n",
     "\n",
     "parameter_set.supported_model_versions\n",
     "# [\"2019.1\", \"2020.1\"]\n",
     "\n",
-    "#should match whatever term is used in forcing for the directory containing the actual files\n",
-    "parameter_set.storage_dir\n",
+    "parameter_set.directory\n",
     "# '/mnt/data/ewatercycle/parameter_sets/wflow/30-min-global'"
    ]
   },
@@ -241,7 +275,7 @@
    "source": [
     "## Creating, setting up, and initializing a model instance\n",
     "\n",
-    "Now that we have created a forcing and selected a version of the model and a parameter set, we can create a model instance. When creating an instance we will have to select the version of the model to use, a parameter set, and a forcing. This will all be combined into an instance object. This can then be inspected for available paramters and default values, setup to create the configuration file, work_dir containing input files, and container, and initialized to prepare a model for running.\n",
+    "Now that we have created a forcing and selected a version of the model and a parameter set, we can create a model instance. When creating an instance we will have to select the version of the model to use, a parameter set, and a forcing. This will all be combined into an instance object. This can then be inspected for available parameters and default values, setup to create the configuration file, work_dir containing input files, and container, and initialized to prepare a model for running.\n",
     "\n",
     "The way models are created, setup, and initialized matches PyMT as much as possible. There is currently no 'run' method as this convenance method makes it harder for users to create a more advanced usecase from a simple example."
    ]
@@ -255,10 +289,7 @@
    "source": [
     "import ewatercycle.models\n",
     "\n",
-    "#Normally the objects created above are passed as arguments to the creation of the model instance.\n",
-    "#This is an example of how to manually pass an existing parameter set or forcing.\n",
-    "parameter_set = '/some/parameter/set/dir'\n",
-    "forcing = '/some/forcing/dir'\n",
+    "#A parameter set and forcing object must be loaded or found before instanciating a model.\n",
     "\n",
     "#Creates as model instance from a model version, parameter_set, and forcing\n",
     "#version = mandatory\n",
@@ -272,8 +303,6 @@
     "#creator of the model class to implement. For non-science settings such as logging settings, or file names\n",
     "# for all parameter files it does not always make sense to expose these.\n",
     "model_instance.parameters\n",
-    "#parameter_set: <Paramater_Set>\n",
-    "#forcing: <Forcing>\n",
     "#soil_depth: 9 (defaults to value in parameter set e.g. in a config template)\n",
     "#start_time=\"2021-05-07T13:32:00Z\" (defaults to start of forcing)\n",
     "#end_time=\"2021-05-07T13:32:00Z\" (defaults to end of forcing)\n",
@@ -300,6 +329,9 @@
     "#An opportunity to inspect the generated configuration file, and make any changes manually that could not be\n",
     "#done through the setup method. Splitting these also makes it easier to run initialize in parallel in case a\n",
     "#lot of models are created simultaneously (e.g. when calibrating a model)\n",
+    "config = configparser.ConfigParser()\n",
+    "config.read(cfg_file)\n",
+    "#change config file where needed...\n",
     "\n",
     "#This function will initialize the model using the files created above. For some models this can take some time.\n",
     "model_instance.initialize(cfg_file)"
