--- a/examples/MarrmotM01.ipynb
+++ b/examples/MarrmotM01.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "f36e77a9",
+   "id": "d89b13cc",
    "metadata": {},
    "source": [
     "# Running Marrmot M01 using the ewatercycle system"
@@ -10,9 +10,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3d4b9d52",
+   "id": "d2cabb04",
    "metadata": {},
    "source": [
+    "Make sure your ewatercycle conda environment is [activated](https://github.com/eWaterCycle/ewatercycle#install).\n",
+    "\n",
     "### 1. Copy an example case\n",
     "\n",
     "On https://github.com/wknoben/MARRMoT/tree/master/BMI/Config there is a example config file."
@@ -21,7 +23,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "e1706613",
+   "id": "85b02133-aa4b-4135-a733-d00c053a560d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "88be25a1",
+   "id": "a8564493",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +45,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ef5c0240",
+   "id": "fd271664",
    "metadata": {},
    "source": [
     "### 2. Verify your configuration settings\n",
@@ -55,8 +57,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "3f7b296d",
+   "execution_count": 2,
+   "id": "069ee59d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,23 +68,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "836b4415",
+   "execution_count": 3,
+   "id": "a3203d39",
    "metadata": {},
    "outputs": [],
    "source": [
     "with open('./ewatercycle.yaml', 'w') as f:\n",
     "    yaml.dump({\n",
     "        'container_engine': 'docker', # or singularity\n",
-    "        'marrmot.docker_image': 'ewatercycle/marrmot-grpc4bmi:2020.11',\n",
     "        'output_dir': './', # the directory where the model work_dir will be created\n",
+    "        'singularity_dir': 'null',\n",
     "    }, f)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "2a96ba9d",
+   "execution_count": 4,
+   "id": "5787b59b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +93,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a35471c3",
+   "id": "4bf3aebd",
    "metadata": {},
    "source": [
     "### 3. Setting uip the model"
@@ -99,51 +101,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "134099ac",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/_warnings.py:18: UserWarning: \n",
-      "  Thank you for trying out the new ESMValCore API.\n",
-      "  Note that this API is experimental and may be subject to change.\n",
-      "  More info: https://github.com/ESMValGroup/ESMValCore/issues/498\n",
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:254: ESMValToolDeprecationWarning: `write_plots` will be removed in 2.4.0.\n",
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_config_validators.py:255: ESMValToolDeprecationWarning: `write_netcdf` will be removed in 2.4.0.\n",
-      "/home/verhoes/miniconda38/envs/ewatercycle/lib/python3.9/site-packages/esmvalcore/experimental/config/_validated_config.py:80: MissingConfigParameter: `drs` is not defined (https://docs.esmvaltool.org/projects/ESMValCore/en/latest/quickstart/configure.html)\n"
-     ]
-    }
-   ],
-   "source": [
-    "from ewatercycle.models import MarrmotM01"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "0a4c839c",
+   "execution_count": null,
+   "id": "a47a6f73",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model = MarrmotM01()"
+    "import ewatercycle.models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "6bfc1dc0",
+   "execution_count": 6,
+   "id": "a46d2892",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('maximum_soil_moisture_storage', 1000.0),\n",
-       " ('initial_soil_moisture_storage', 900.0),\n",
+       "['2020.11']"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ewatercycle.models.MarrmotM01.available_versions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "c4bcdad8",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<ewatercycle.models.marrmot.MarrmotM01 at 0x7f7b8e7a99a0>"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model = ewatercycle.models.MarrmotM01(version='2020.11', forcing=forcing_file)\n",
+    "model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "4185acc3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('maximum_soil_moisture_storage', 10.0),\n",
+       " ('initial_soil_moisture_storage', 5.0),\n",
        " ('solver',\n",
-       "  Solver(name='createOdeApprox_IE', resnorm_tolerance=0.1, resnorm_maxiter=6.0))]"
+       "  Solver(name='createOdeApprox_IE', resnorm_tolerance=array([0.1]), resnorm_maxiter=array([6.]))),\n",
+       " ('start time', '1989-01-01T00:00:00+00:00'),\n",
+       " ('end time', '1992-12-31T00:00:00+00:00'),\n",
+       " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
      "execution_count": 8,
@@ -158,14 +182,14 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4ef7a691",
+   "id": "5b41e8f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/examples/marrmot_20210419_135246/marrmot-m01_config.mat'),\n",
-       " PosixPath('/home/verhoes/git/eWaterCycle/ewatercycle/examples/marrmot_20210419_135246'))"
+       "(PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210518_163333/marrmot-m01_config.mat'),\n",
+       " PosixPath('/home/sarah/GitHub/ewatercycle/examples/marrmot_20210518_163333'))"
       ]
      },
      "execution_count": 9,
@@ -175,8 +199,8 @@
    ],
    "source": [
     "cfg_file, cfg_dir = model.setup(\n",
-    "    forcing=forcing_file,\n",
     "    maximum_soil_moisture_storage=1234.0,\n",
+    "    end_time = \"1989-01-10T00:00:00+00:00\",\n",
     ")\n",
     "cfg_file, cfg_dir"
    ]
@@ -184,16 +208,18 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5ac41a70",
+   "id": "925fd7bd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('maximum_soil_moisture_storage', 1234.0),\n",
-       " ('initial_soil_moisture_storage', 900.0),\n",
+       " ('initial_soil_moisture_storage', 5.0),\n",
        " ('solver',\n",
-       "  Solver(name='createOdeApprox_IE', resnorm_tolerance=0.1, resnorm_maxiter=6.0)),\n",
+       "  Solver(name='createOdeApprox_IE', resnorm_tolerance=array([0.1]), resnorm_maxiter=array([6.]))),\n",
+       " ('start time', '1989-01-01T00:00:00+00:00'),\n",
+       " ('end time', '1989-01-10T00:00:00+00:00'),\n",
        " ('forcing_file', PosixPath('BMI_testcase_m01_BuffaloRiver_TN_USA.mat'))]"
       ]
      },
@@ -209,7 +235,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7fe01b22",
+   "id": "8476fe8a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,8 +244,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "d6eea564",
+   "execution_count": 12,
+   "id": "516620d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +255,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "375de952",
+   "id": "9e12e910",
    "metadata": {},
    "outputs": [
     {
@@ -258,17 +284,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "id": "f49eabe1",
+   "execution_count": 14,
+   "id": "c7302682",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([4.16036419e-09])"
+       "array([0.])"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,8 +305,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "ec7992f4",
+   "execution_count": 15,
+   "id": "769635d6",
    "metadata": {},
    "outputs": [
     {
@@ -638,26 +664,26 @@
        "  fill: currentColor;\n",
        "}\n",
        "</style><pre class='xr-text-repr-fallback'>&lt;xarray.DataArray &#x27;flux_out_Q&#x27; (latitude: 1, longitude: 1)&gt;\n",
-       "array([[4.16036419e-09]])\n",
+       "array([[0.]])\n",
        "Coordinates:\n",
        "  * longitude  (longitude) float64 87.49\n",
        "  * latitude   (latitude) float64 35.29\n",
-       "    time       object 1989-01-04 00:00:00\n",
+       "    time       object 1989-01-02 00:00:00\n",
        "Attributes:\n",
-       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-2bf29257-3c93-4082-acac-68a05cc58b3a' class='xr-array-in' type='checkbox' checked><label for='section-2bf29257-3c93-4082-acac-68a05cc58b3a' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>4.16e-09</span></div><div class='xr-array-data'><pre>array([[4.16036419e-09]])</pre></div></div></li><li class='xr-section-item'><input id='section-cf33b521-f88e-4f09-8c77-fb4bab6b8e27' class='xr-section-summary-in' type='checkbox'  checked><label for='section-cf33b521-f88e-4f09-8c77-fb4bab6b8e27' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-e35e371f-0088-4b9d-bf45-463ed3349aeb' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-e35e371f-0088-4b9d-bf45-463ed3349aeb' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-40a125aa-d8a0-4bc5-ab43-45bd2fa1b8b6' class='xr-var-data-in' type='checkbox'><label for='data-40a125aa-d8a0-4bc5-ab43-45bd2fa1b8b6' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-7924f487-a009-4ad6-9cea-e21faa5289df' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-7924f487-a009-4ad6-9cea-e21faa5289df' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-1ae7a1c9-2f60-4e9b-8b1e-be25b9c4f606' class='xr-var-data-in' type='checkbox'><label for='data-1ae7a1c9-2f60-4e9b-8b1e-be25b9c4f606' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-04 00:00:00</div><input id='attrs-19775aaf-4587-4e6f-9158-aae2fe51476d' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-19775aaf-4587-4e6f-9158-aae2fe51476d' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-73c13434-351a-4e58-9bd8-8bf8517ffe29' class='xr-var-data-in' type='checkbox'><label for='data-73c13434-351a-4e58-9bd8-8bf8517ffe29' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 4, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-c86bc3db-c140-4cf7-a2d9-edc17d29e7e3' class='xr-section-summary-in' type='checkbox'  checked><label for='section-c86bc3db-c140-4cf7-a2d9-edc17d29e7e3' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
+       "    units:    mm day</pre><div class='xr-wrap' hidden><div class='xr-header'><div class='xr-obj-type'>xarray.DataArray</div><div class='xr-array-name'>'flux_out_Q'</div><ul class='xr-dim-list'><li><span class='xr-has-index'>latitude</span>: 1</li><li><span class='xr-has-index'>longitude</span>: 1</li></ul></div><ul class='xr-sections'><li class='xr-section-item'><div class='xr-array-wrap'><input id='section-23f2099f-6513-4a1f-be8e-0a4699fb119e' class='xr-array-in' type='checkbox' checked><label for='section-23f2099f-6513-4a1f-be8e-0a4699fb119e' title='Show/hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-array-preview xr-preview'><span>0.0</span></div><div class='xr-array-data'><pre>array([[0.]])</pre></div></div></li><li class='xr-section-item'><input id='section-abf2a8ab-dc9f-4912-bc0f-bb210ba3ae4a' class='xr-section-summary-in' type='checkbox'  checked><label for='section-abf2a8ab-dc9f-4912-bc0f-bb210ba3ae4a' class='xr-section-summary' >Coordinates: <span>(3)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><ul class='xr-var-list'><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>longitude</span></div><div class='xr-var-dims'>(longitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>87.49</div><input id='attrs-c4717736-f615-4184-97b3-ff3525c4cbb1' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-c4717736-f615-4184-97b3-ff3525c4cbb1' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-00050a2e-824d-41ea-8985-b024e7b4a4c0' class='xr-var-data-in' type='checkbox'><label for='data-00050a2e-824d-41ea-8985-b024e7b4a4c0' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([87.49])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span class='xr-has-index'>latitude</span></div><div class='xr-var-dims'>(latitude)</div><div class='xr-var-dtype'>float64</div><div class='xr-var-preview xr-preview'>35.29</div><input id='attrs-18d40141-ae0a-480b-9eaa-2b708301994c' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-18d40141-ae0a-480b-9eaa-2b708301994c' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-a1b7bb29-d5aa-49ed-9c6a-43798ae29a44' class='xr-var-data-in' type='checkbox'><label for='data-a1b7bb29-d5aa-49ed-9c6a-43798ae29a44' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array([35.29])</pre></div></li><li class='xr-var-item'><div class='xr-var-name'><span>time</span></div><div class='xr-var-dims'>()</div><div class='xr-var-dtype'>object</div><div class='xr-var-preview xr-preview'>1989-01-02 00:00:00</div><input id='attrs-49bb533c-0e23-44b2-abde-469653b649cf' class='xr-var-attrs-in' type='checkbox' disabled><label for='attrs-49bb533c-0e23-44b2-abde-469653b649cf' title='Show/Hide attributes'><svg class='icon xr-icon-file-text2'><use xlink:href='#icon-file-text2'></use></svg></label><input id='data-5fc3cf88-6c7d-4226-b2c1-a1ef73a9cba1' class='xr-var-data-in' type='checkbox'><label for='data-5fc3cf88-6c7d-4226-b2c1-a1ef73a9cba1' title='Show/Hide data repr'><svg class='icon xr-icon-database'><use xlink:href='#icon-database'></use></svg></label><div class='xr-var-attrs'><dl class='xr-attrs'></dl></div><div class='xr-var-data'><pre>array(cftime.DatetimeGregorian(1989, 1, 2, 0, 0, 0, 0), dtype=object)</pre></div></li></ul></div></li><li class='xr-section-item'><input id='section-3cd44d2d-916f-46dd-8f57-e86e1aff0f70' class='xr-section-summary-in' type='checkbox'  checked><label for='section-3cd44d2d-916f-46dd-8f57-e86e1aff0f70' class='xr-section-summary' >Attributes: <span>(1)</span></label><div class='xr-section-inline-details'></div><div class='xr-section-details'><dl class='xr-attrs'><dt><span>units :</span></dt><dd>mm day</dd></dl></div></li></ul></div></div>"
       ],
       "text/plain": [
        "<xarray.DataArray 'flux_out_Q' (latitude: 1, longitude: 1)>\n",
-       "array([[4.16036419e-09]])\n",
+       "array([[0.]])\n",
        "Coordinates:\n",
        "  * longitude  (longitude) float64 87.49\n",
        "  * latitude   (latitude) float64 35.29\n",
-       "    time       object 1989-01-04 00:00:00\n",
+       "    time       object 1989-01-02 00:00:00\n",
        "Attributes:\n",
        "    units:    mm day"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,8 +694,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
-   "id": "b6ff403c",
+   "execution_count": 16,
+   "id": "9ef4e3c5-1a0e-403a-af7b-cbb1354c4eb0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n",
+      "[0.]\n"
+     ]
+    }
+   ],
+   "source": [
+    "while (model.time < model.end_time):\n",
+    "    model.update()\n",
+    "    print(model.get_value('flux_out_Q'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "b0585b27-c88b-4f8a-8bbe-18dba5cef444",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,8 +731,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "58255760",
+   "execution_count": 18,
+   "id": "1a3f33b0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +742,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9693ae68",
+   "id": "1227c78f",
    "metadata": {},
    "outputs": [],
    "source": []
